--- a/style.css
+++ b/style.css
@@ -10,23 +10,41 @@ body {
   overflow: hidden;
 }
 
-/* Libro */
+/* ACTIVAR AUDIO */
+#activar {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.mensaje {
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  padding: 20px;
+}
+
+/* LIBRO */
 #book {
   margin: auto;
 }
 
-/* Páginas */
+/* PÁGINAS */
 .page {
   background: white;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 22px;
-  user-select: none;
   cursor: pointer;
+  user-select: none;
 }
 
-/* Portada */
+/* PORTADA */
 .portada img {
   width: 100%;
   height: 100%;
