--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
+/* Texto estilo libro en páginas 2, 3 y 4 */
 .texto-superpuesto {
   position: absolute;
   z-index: 2;
-  top: 50%;                
-  left: 50%;               
-  transform: translate(-50%, -50%); 
+  top: 15%;        /* arriba, estilo párrafo */
+  left: 10%;
+  right: 10%;
   color: black;
   font-size: 18px;
   line-height: 1.6;
-  text-align: center;       
+  text-align: justify;   /* estilo libro */
   font-family: 'Baloo 2', sans-serif;
-  max-width: 80%;           
 }
 
 /* FRASE FINAL EN PÁGINA 5 */
